--- a/encuesta/templates/encuesta/resultado.html
+++ b/encuesta/templates/encuesta/resultado.html
@@ -3,5 +3,5 @@
 
 <h1>Encuesta Terminada</h1>
 <p>Muchas Gracias por Realizar la encuesta, su opinion es muy importante para nosotros.</p>
-
+<div id="div-terminado"></div>
 {% endblock container %}
