--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,14 @@
     <html>
         <head>
             <title>Encuesta CUC</title>
+            <link rel="icon" type="image/png" href="{% static 'encuesta/imagenes/logo_cuc.png' %}">
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
             <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
             <link rel="stylesheet" href="{% static 'encuesta/css/style.css' %}">
         </head>
 		<body>
-				<nav class="navbar navbar-dark bg-primary">
+				<!--<nav class="navbar navbar-dark bg-primary">
 				  <div class="container-fluid">
 				    <div class="navbar-header">
 
@@ -16,24 +17,29 @@
 				    </div>
 				  </div>
 				</nav>
-
-      		  		<div class="content container">
-           		 <div class="row">
-               		 <div class="col-md-12">
-                         {% if messages %}
-                        <div class="messages">
-                            {% for message in messages %}
-                                <div {% if message.tags %} class="alert alert-{% if message.tags == 'error' %}danger{% else%}{{ message.tags }}{% endif %} alert-dismissible"{% endif %} role='alert'>
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                         {{ message }}
+-->
+      		    <div class="content container" id="principal" style="display: none">
+           		    <div class="row">
+                   		 <div class="col-md-12">
+                                 {% if messages %}
+                                <div class="messages">
+                                    {% for message in messages %}
+                                        <div {% if message.tags %} class="alert alert-{% if message.tags == 'error' %}danger{% else%}{{ message.tags }}{% endif %} alert-dismissible"{% endif %} role='alert'>
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close" id="closeMen"><span aria-hidden="true">&times;</span></button>
+                                     {{ message }}
+                                            </div>
+                                    {% endfor %}
                                 </div>
-                        {% endfor %}
-                        </div>
-                        {% endif %}
-                        {% block container %}
-                		{% endblock container %}
-                		</div>
-            		</div>
-        	</div>
+                                {% endif %}
+                                {% block container %}
+                        		{% endblock container %}
+                    		</div>
+                	</div>
+        	   </div>
+
+
+            <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <script src="{% static 'encuesta/js/myscript.js' %}"></script>
     	</body>
     </html>
